--- a/doc/report1/report1.tex
+++ b/doc/report1/report1.tex
@@ -172,6 +172,14 @@ This instigated a switch to using C++ for development, and using the proper C++ 
 
 However although ns-3 API has its own API, it was clear that such an implementation would be too different from the one targeting the real world.
 
+\begin{figure}
+\begin{center}
+  \includegraphics[width=11cm]{cpu_nodes.png}
+\end{center}
+\caption{Control flow states}
+\label{flow}
+\end{figure}  
+
 
 \section{Future Plans}
 
@@ -382,7 +390,7 @@ Alternatives to the Chord Protocol. Boston University. http://nislab.bu.edu/sc54
 \bibitem{p2plxc}
 M. Bardac, R. Deaconescu, and A. M. Florea, ``Scaling Peer-to-Peer
 Testing using Linux Containers'', in Proceedings of the 9th RoEduNet
-IEEE International Conference, 2010, pp. 287–292.
+IEEE International Conference, 2010, pp. 287-292.
 
 \end{thebibliography}
 \end{document}
